# claude-dashboard

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
app/: config.py
app/models/: schemas.py
app/routers/: agents.py  live.py  overview.py  pixel_office.py  projects.py  sessions.py  tasks.py  teams.py  tokens.py  tools.py
app/services/: agent_service.py  cache.py  file_watcher.py  log_parser.py  pixel_agents_service.py  project_service.py  session_service.py  stats_service.py  task_service.py  token_service.py  tool_service.py
app/templates/: agent_detail.html  agents.html  base.html  live.html  overview.html  pixel_office.html  project_detail.html  projects.html  replay.html  session_detail.html  sessions.html  tasks.html  teams.html  tokens.html  tools.html
app/templates/components/: nav.html  stats_card.html
app/templates/partials/: agents_content.html  overview_content.html  projects_content.html  sessions_content.html  tasks_content.html  teams_content.html  tokens_content.html  tools_content.html
docs/: pixel-office-plan.md
static/js/: charts.js  pixel-office-decorations.js  pixel-office-movement.js  pixel-office.js
tests/: conftest.py  test_agent_service.py  test_config.py  test_file_watcher.py  test_log_parser.py  test_pixel_agents_service.py  test_pixel_office_router.py  test_project_service.py  test_session_service.py  test_session_stream.py  test_task_service.py
tests/fixtures/: sample.jsonl
