[project]
name = "claude-dashboard"
version = "1.0.0"
description = "Claude Code usage analytics dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]
